modificado con el penultimo

--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "id": "05cd66c7",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 121,
    "id": "24bbb02e",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 122,
    "id": "a13809de",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 123,
    "id": "50a98e3d",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "(None, None, None)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "id": "bc695755",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 125,
    "id": "e1dcee72",
    "metadata": {},
    "outputs": [
@@ -224,28 +224,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 126,
    "id": "018f8e89",
    "metadata": {},
    "outputs": [],
    "source": [
     "rt1=(x-y)\n",
-    "rt2=(x+y)"
+    "rt2=(x+y)\n",
+    "\n",
+    "rt10=(x0-y0)\n",
+    "rt20=(x0+y0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 127,
    "id": "6c3fa1a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rt=rt1*rt2"
+    "rt=rt1*rt2\n",
+    "rt0=rt10*rt20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 128,
    "id": "530a44aa",
    "metadata": {},
    "outputs": [
@@ -253,37 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2469135782469133\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "0c9e8cca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s=rt-r\n",
-    "s0=rt-r0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "57bbd576",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "-64139007926771.0\n"
+      "2469135782469133\n",
+      "2469135782469133.0\n"
      ]
     },
     {
@@ -292,13 +267,57 @@
        "(None, None)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(s), print(s0)"
+    "print(rt), print(rt0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "0c9e8cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=rt-r\n",
+    "s0=rt-r0\n",
+    "s1=rt0-r\n",
+    "s10=rt0-r0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "57bbd576",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-64139007926771.0\n",
+      "0.0\n",
+      "-64139007926771.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None, None)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(s), print(s0), print (s1), print(s10)"
    ]
   },
   {
@@ -306,7 +325,7 @@
    "id": "f76adcb8",
    "metadata": {},
    "source": [
-    "R."
+    "R. We can evade the catastrophic cancellation with use of integers, or use elemental operation instead of operations more difficults with float\n"
    ]
   },
   {
@@ -332,37 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
    "id": "b8a3efc5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "\n",
-    "def mu(numeros):\n",
+    "def numeros(ini,fi,N):\n",
+    "    numeros=np.linspace(ini,fi,N)\n",
+    "    return numeros\n",
+    "\n",
+    "def mu(ini,fi,N):\n",
     "    suma=0\n",
+    "    numeros=np.linspace(ini,fi,N)\n",
     "    for i in numeros:\n",
-    "        suma=suma+i\n",
-    "    m=suma/i\n",
+    "        suma+=i\n",
+    "    m=suma/N\n",
     "    return m\n",
     "\n",
+    "def resta(x,ini,fi,N):\n",
+    "    return (x-mu(ini,fi,N))**2    \n",
     "\n",
-    "def numeros2(numeros):\n",
-    "    for i in numeros:\n",
-    "        numeros2[i]=(numeros[i]-mu(numeros))**2\n",
-    "    return numeros2\n",
-    "    \n",
-    "\n",
-    "def v(numeros2):\n",
+    "def v(ini,fi,N):\n",
+    "    numeros2=resta(numeros(ini,fi,N),ini,fi,N)\n",
     "    suma=0\n",
     "    for i in numeros2:\n",
-    "        suma=suma+i\n",
-    "    va=suma/i\n",
+    "        suma+=i\n",
+    "    va=suma/N\n",
     "    return va"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 109,
    "id": "63e4fd41",
    "metadata": {},
    "outputs": [
@@ -370,41 +392,162 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0110987791342945\n"
+      "[1.   1.01 1.02 1.03 1.04 1.05 1.06 1.07 1.08 1.09]\n",
+      "1.045\n",
+      "[0.2025 0.1225 0.0625 0.0225 0.0025 0.0025 0.0225 0.0625 0.1225 0.2025]\n",
+      "0.0008250000000000014\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None, None)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mu([1.01,2.03,3.05,4.01,5.01,6.01,7.01,8.01,9.01]))"
+    "print(numeros(1.00,1.09,10)), print (mu(1.00,1.09,10)), print(numeros2), print(v(1.00,1.09,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
    "id": "524ee8f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def numeros(ini,fi,N):\n",
+    "    numeros=np.linspace(ini,fi,N)\n",
+    "    return numeros\n",
+    "\n",
+    "def mu1(ini,fi,N):\n",
+    "    suma=0\n",
+    "    numeros=np.linspace(ini,fi,N)\n",
+    "    for i in numeros:\n",
+    "        suma+=i\n",
+    "    m=suma/N\n",
+    "    return m\n",
+    "\n",
+    "def po(x):\n",
+    "    return (x)**2\n",
+    "\n",
+    "def var(ini,fi,N):\n",
+    "    numeross=po(numeros(ini,fi,N))\n",
+    "    suma=0\n",
+    "    for i in numeross:\n",
+    "        suma+=i\n",
+    "    var=(suma/N)-(mu1(ini,fi,N))**2\n",
+    "    return var\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "adb9c6c6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not float",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3967/1920369047.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumeros2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2.03\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3.05\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9.01\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_3967/1601547686.py\u001b[0m in \u001b[0;36mnumeros2\u001b[0;34m(numeros)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnumeros2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumeros\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnumeros\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mnumeros2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumeros\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumeros\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnumeros2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not float"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.045\n",
+      "0.0008250000000000757\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(numeros2([1.01,2.03,3.05,4.01,5.01,6.01,7.01,8.01,9.01]))"
+    "print(mu1(1.00,1.09,10)), print(var(1.00,1.09,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "balanced-links",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.23456789e+08 1.23456789e+08 1.23456789e+08 1.23456789e+08\n",
+      " 1.23456789e+08 1.23456789e+08 1.23456789e+08 1.23456789e+08\n",
+      " 1.23456789e+08 1.23456789e+08]\n",
+      "123456789.04499999\n",
+      "0.0008250000357630238\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(numeros(123456789.00,123456789.09,10)), print (mu(123456789.00,123456789.09,10)) ,print(v(123456789.00,123456789.09,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "velvet-athletics",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456789.04499999\n",
+      "4.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(mu1(123456789.00,123456789.09,10)), print(var(123456789.00,123456789.09,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "appointed-blogger",
+   "metadata": {},
+   "source": [
+    "**2.13**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb9c6c6",
+   "id": "compressed-thursday",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -412,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -426,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
