ejercicio ultimo editado

--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -541,13 +541,101 @@
    "id": "appointed-blogger",
    "metadata": {},
    "source": [
-    "**2.13**"
+    "**2.13** This problem studies a new rational function:\n",
+    "\n",
+    "$t(x)=\\cfrac{7x^4-101x^3+540x^2-1204x+958}{x^4-14x^3+72x^2-151x+112}$\n",
+    "\n",
+    "Notice that the denominator is the same as in problem 2.12.\n",
+    "\n",
+    "(a) Plot $t(x)$, evaluated via Horner’s rule, along with the following (equivalent) continued fraction, from $x = 0$ to $x = 4$:\n",
+    "\n",
+    "$u(x)=7-\\cfrac{3}{x-2-\\cfrac{1}{x-7+\\cfrac{10}{x-2-\\cfrac{2}{x-3}}}}$\n",
+    "\n",
+    "You may wish to know that:\n",
+    "\n",
+    "$u(1)=10, u(2)=7, u(3)=4.6, u(4)=5.5 $\n",
+    "\n",
+    "(b) Evaluate each of these functions for $x = 10^{77}$ (make sure to use ﬂoats in your\n",
+    "code). Do you understand what is happening? Are you starting to prefer one\n",
+    "formulation over the other? (What happens if you use integers instead of ﬂoats?)\n",
+    "\n",
+    "(c) Plot the two Python functions (t(x) and u(x)) for $x = 2.400 + 2^{−52} i$, where i goesfrom 0 to 800. Was your intuition (about which formulation is better) correct?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "compressed-thursday",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def horner(coef,x0,xf):\n",
+    "    n=len(coef)\n",
+    "    x=xf-x0\n",
+    "    for i in range (x):\n",
+    "        poli=coef[n-1]\n",
+    "        polin=0\n",
+    "        for j in range(n-1,0,-1):\n",
+    "            polin=(poli)*i+coef[j-1]\n",
+    "            poli=polin\n",
+    "        print ([i,poli])    \n",
+    "        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "demographic-graduate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def horner2(coef,x):\n",
+    "    n=len(coef)\n",
+    "    poli=coef[n-1]\n",
+    "    polin=0\n",
+    "    for j in range(n-1,0,-1):\n",
+    "        polin=(poli)*x+coef[j-1]\n",
+    "        poli=polin\n",
+    "    print ([i,poli]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "municipal-footage",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'i' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-58-cb06cfdc64f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhorner2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m622\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m751\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m324\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m59\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.606\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-56-786d30ca4634>\u001b[0m in \u001b[0;36mhorner2\u001b[0;34m(coef, x)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mpolin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mcoef\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mpoli\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpolin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpoli\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "horner2([622,-751,324,-59,4],1.606)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compressed-thursday",
+   "id": "adjacent-rescue",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "offshore-matter",
    "metadata": {},
    "outputs": [],
    "source": []
