ejercicios 2,25 al dia

--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "id": "a5a335f8",
    "metadata": {},
    "outputs": [],
@@ -1023,20 +1023,170 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8fd62f9",
+   "cell_type": "markdown",
+   "id": "60595fc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Finally..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "644e6610",
+   "metadata": {},
+   "source": [
+    "**2.25** Generalize our code in multipole.py so that it works regardless of whether or not $r > r_i$ . This necessitates changes to all three functions in that program.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b4be278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0999999999999999 1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def kahansum(xs):\n",
+    "    s = 0.; e = 0.\n",
+    "    for x in xs:\n",
+    "        temp = s\n",
+    "        y = x + e\n",
+    "        s = temp + y\n",
+    "        e = (temp - s) + y\n",
+    "    return s\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    xs = [0.7, 0.1, 0.3]\n",
+    "    print(sum(xs), kahansum(xs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fb46763a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 1] 14.648439740503107\n",
+      "[0.0, -1] -0.6582579911707249\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "    \n",
+    "def chargearray(nvals):\n",
+    "    vals = [-0.5 + i/(nvals-1) for i in range(nvals)]\n",
+    "    qtopos = {}\n",
+    "    for i,posx in enumerate(vals):\n",
+    "        for j,posy in enumerate(vals):\n",
+    "            count = j + nvals*i + 1\n",
+    "            key = 1.02*count if (i+j)%2==0 else -count\n",
+    "            qtopos[key] = posx, posy\n",
+    "    return qtopos\n",
+    "\n",
+    "def vecmag(rs):\n",
+    "    sq = [r**2 for r in rs]\n",
+    "    return sqrt(kahansum(sq))\n",
+    "\n",
+    "def fullpot(qtopos,rs):\n",
+    "    potvals = []\n",
+    "    for q,pos in qtopos.items():\n",
+    "        diffs = [r - po for r,po in zip(rs,pos)]\n",
+    "        R = vecmag(diffs)\n",
+    "        potvals.append(q/R)\n",
+    "    return kahansum(potvals)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    qtopos = chargearray(6)\n",
+    "    for y in 1,-1:\n",
+    "        rs = [0.,y]\n",
+    "        potval = fullpot(qtopos,rs)\n",
+    "        print(rs, potval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "268cac01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 1] 14.648439743371517\n",
+      "[0.0, -1] -0.6582579940437837\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def decomp(rs,ris):\n",
+    "    rmag = vecmag(rs); rimag = vecmag(ris)\n",
+    "    prs = [r*ri for r,ri in zip(rs,ris)]\n",
+    "    vecdot = kahansum(prs)\n",
+    "    costheta = vecdot/(rmag*rimag)\n",
+    "    return rmag, rimag, costheta\n",
+    "\n",
+    "def multicoes(rs,qtopos,nmax=60):\n",
+    "    coes = [0. for n in range(nmax+1)]\n",
+    "    for n in range(nmax+1):\n",
+    "        for q,pos in qtopos.items():\n",
+    "            rmag, rimag, costheta = decomp(rs,pos)\n",
+    "            val = q*(rimag**n)*legendre(n,costheta)[0]\n",
+    "            coes[n] += val\n",
+    "    return coes\n",
+    "\n",
+    "def multifullpot(rs,qtopos):\n",
+    "    coes = multicoes(rs,qtopos)\n",
+    "    rmag = vecmag(rs)\n",
+    "    contribs = [coe/rmag**(n+1) for n,coe in enumerate(coes)]\n",
+    "    return kahansum(contribs)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    qtopos = chargearray(6)\n",
+    "    for y in 1,-1:\n",
+    "        rs = [0.,y]\n",
+    "        potval = multifullpot(rs,qtopos); print(rs, potval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c386d1d",
+   "metadata": {},
+   "source": [
+    "**2.28** When implementing Hartree–Fock theory for Coulomb interactions, one option is to employ Gaussian-type orbitals; the (nuclear-attraction) integrals involved in this approach  $fn(x) = \\int_{0}^{1} dt exp(−xt^2 )t^{2n} $ obey the following recurrence relation:\n",
+    "\n",
+    "$f_n(x)=\\cfrac{(2n − 1) f_{n−1}(x) − e^{−x}}{2x}$\n",
+    "\n",
+    "which is closer to Eq. (2.86) than to Eq. (2.64), since this involves an x dependence.\n",
+    "Start with $f_{30}(x) = 1$ and employ backward recursion to plot $f_{10}(x)$."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8e1aa1",
+   "id": "0707ec84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Hartreefock(ni,vi,n):\n",
+    "    valni=vi\n",
+    "    valn=0\n",
+    "    for i in range(ni,n,1):\n",
+    "        valn=(valni*2*x+e**(-x))/2(n-1)"
+   ]
   }
  ],
  "metadata": {
