--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "id": "c735c81f",
    "metadata": {},
    "outputs": [
@@ -86,20 +86,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0 1.0\n",
-      "0.5 0.0\n"
+      "2.0 2.0000000000000235\n",
+      "0.5 0.49999999999999944\n"
      ]
     }
    ],
    "source": [
     "from math import sqrt\n",
-    "def f(x,nmax=100):\n",
+    "def f(x,nmax=10):\n",
     "    for i in range(nmax):\n",
     "        x = sqrt(x)\n",
     "    for i in range(nmax):\n",
     "        x = x**2\n",
     "    return x\n",
-    "for xin in (5., 0.5):\n",
+    "for xin in (2., 0.5):\n",
     "    xout = f(xin); print(xin, xout)"
    ]
   },
@@ -108,7 +108,7 @@
    "id": "5d8675e2",
    "metadata": {},
    "source": [
-    "R. "
+    "R. While more interaction do this program, the cathastrophic cancellation are more evident."
    ]
   },
   {
@@ -722,7 +722,7 @@
    "id": "ead44ff0",
    "metadata": {},
    "source": [
-    "R=\n"
+    "R= Is more correct do the function evaluation that the app horner because, the horner app take floats for the operations and it leads to mistakes. We can see the uncertainly in the graphs for small numbers. \n"
    ]
   },
   {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a5a335f8",
    "metadata": {},
    "outputs": [],
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "id": "2c9f770c",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 7,
    "id": "5f478199",
    "metadata": {},
    "outputs": [],
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "id": "0e76724c",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "b6b3fc43",
    "metadata": {},
    "outputs": [],
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "1ed0f4e7",
    "metadata": {},
    "outputs": [
@@ -995,12 +995,15 @@
    ],
    "source": [
     "from matplotlib import pyplot\n",
+    "\n",
+    "x=[-1+i*0.001 for i in range(2000)]\n",
+    "\n",
     "g=[chebysev(1,j) for j in x]\n",
     "k=[chebysev(2,j) for j in x]\n",
     "l=[chebysev(3,j) for j in x]\n",
     "m=[chebysev(4,j) for j in x]\n",
     "\n",
-    "x=[-1+i*0.001 for i in range(2000)]\n",
+    "\n",
     "pyplot.plot(x,g ,'bp', k, 'yp', l,'rp', m, 'gp' )\n",
     "pyplot.show()"
    ]
@@ -1040,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "6b4be278",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "fb46763a",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "268cac01",
    "metadata": {},
    "outputs": [
@@ -1125,18 +1128,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0, 1] 14.648439743371517\n",
-      "[0.0, -1] -0.6582579940437837\n"
+      "[0.0, 1] 25.477163142473906\n",
+      "[0.0, -1] -10.110117166717394\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "def decomp(rs,ris):\n",
     "    rmag = vecmag(rs); rimag = vecmag(ris)\n",
-    "    prs = [r*ri for r,ri in zip(rs,ris)]\n",
-    "    vecdot = kahansum(prs)\n",
-    "    costheta = vecdot/(rmag*rimag)\n",
+    "    if vecmag(rs)<vecmag(ris):    \n",
+    "        prs = [r*ri for r,ri in zip(rs,ris)]\n",
+    "        vecdot = kahansum(prs)\n",
+    "        costheta = vecdot/(rmag*rimag)\n",
+    "    else:\n",
+    "        prs = [r*ri for r,ri in zip(ris,rs)]\n",
+    "        vecdot = kahansum(prs)\n",
+    "        costheta = vecdot/(rmag*rimag)\n",
     "    return rmag, rimag, costheta\n",
     "\n",
     "def multicoes(rs,qtopos,nmax=60):\n",
@@ -1144,8 +1151,12 @@
     "    for n in range(nmax+1):\n",
     "        for q,pos in qtopos.items():\n",
     "            rmag, rimag, costheta = decomp(rs,pos)\n",
-    "            val = q*(rimag**n)*legendre(n,costheta)[0]\n",
-    "            coes[n] += val\n",
+    "            if vecmag(rs)<vecmag(pos):\n",
+    "                val = q*(rimag**n)*legendre(n,costheta)[0]\n",
+    "                coes[n] += val\n",
+    "            else:\n",
+    "                val = q*(rmag**n)*legendre(n,costheta)[0]\n",
+    "                coes[n] += val\n",
     "    return coes\n",
     "\n",
     "def multifullpot(rs,qtopos):\n",
@@ -1176,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "id": "0707ec84",
    "metadata": {},
    "outputs": [],
@@ -1197,8 +1208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "e8cbd7de",
+   "execution_count": 51,
+   "id": "82143a08",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c1aa15",
+   "id": "f646779f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1233,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c0c26b",
+   "id": "17f8df3e",
    "metadata": {},
    "outputs": [],
    "source": []
