--- a/Ejercicios.ipynb
+++ b/Ejercicios.ipynb
@@ -1030,7 +1030,26 @@
    "id": "60595fc5",
    "metadata": {},
    "source": [
-    "Finally..."
+    "Finally, if we have\n",
+    "$T_n (x) = cos (n cos^{−1} (x))$\n",
+    "\n",
+    "$T'_n (x) = -sen (n cos^{−1} (x))\\cdot n \\cdot (\\cfrac{-1}{\\sqrt{1-x^2}})$\n",
+    "\n",
+    "Now if we match zero to know the critical points.\n",
+    "\n",
+    "$ -sen (n cos^{−1} (x)) \\cdot n \\cdot (\\cfrac{-1}{\\sqrt{1-x^2}})=0$\n",
+    "\n",
+    "$-sen(n cos^{−1} (x))=0$\n",
+    "\n",
+    "$n cos^{−1} (-x)=j\\pi$\n",
+    "\n",
+    "$cos^{-1}(-x)=\\cfrac{j\\pi}{n}$\n",
+    "\n",
+    "$x_j=-cos(\\cfrac{j\\pi}{n})$\n",
+    "\n",
+    "Then for $T_{n-1}$\n",
+    "\n",
+    "$x_j=-cos(\\cfrac{j\\pi}{n-1})$"
    ]
   },
   {
@@ -1266,7 +1285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
