--- a/Ejercicios_capitulo_3.ipynb
+++ b/Ejercicios_capitulo_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "b6328473-350b-43ef-bba3-4c16d4a079f7",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
    "source": [
     "**Ejercicios capitulo 3**\n",
     "\n",
-    "**2.1** Make sure SymPy is installed on your system; use it to analytically differentiate the function $f(x) = e^{sin(2x)}$. Then, evaluate the derivative at a few points from $x = 0 to x = 0.5$. Compare the latter values to the output of fprime() from code 3.1."
+    "**3.1** Make sure SymPy is installed on your system; use it to analytically differentiate the function $f(x) = e^{sin(2x)}$. Then, evaluate the derivative at a few points from $x = 0 to x = 0.5$. Compare the latter values to the output of fprime() from code 3.1."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "id": "7d20dfdf-9fdf-4df5-b827-1b4b4f5898ac",
    "metadata": {},
    "source": [
-    "**2.4** We turn to the fascinating approach of complex-step differentiation. First, Taylor\n",
+    "**3.4** We turn to the fascinating approach of complex-step differentiation. First, Taylor\n",
     "expand $f (x + ih)$ around $x$, where $f$ is an analytic function; take the imaginary part of both sides and divide by h to show that $f'(x) = Im[ f (x + ih)/h] + O(h^2)$ holds. Then, augment Fig. 3.2 to include results from this new method; you’ll need to employ complex arithmetic. Unmistakably, circumventing catastrophic cancellation pays off."
    ]
   },
@@ -149,9 +149,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34486039-fa9c-4bf0-8592-943439cc05bc",
+   "metadata": {},
+   "source": [
+    "**3.7** We turn to the first central-difference approximation to the second derivative.\n",
+    "\n",
+    "(a) Start with the error analysis, including both approximation and roundoff error. Derive expressions for the $h_{opt}$ and the $\\epsilon_{opt}$ . Then, produce numerical estimates for $h_{opt}$ and the $\\epsilon_{opt}$. Compare these results to those for the first derivative.\n",
+    "\n",
+    "(b) Now code this problem up in Python (for the function $f (x) = e^{sin(2x)}$ at $x = 0.5$) to produce both a table of numbers and a plot for the absolute error, with h taking on the values $10^{−1}, 10^{−2}, 10^{−3}, . . ., 10^{−10}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f03dbdd-ae31-4a0f-9620-1d7ad23a8113",
+   "metadata": {},
+   "source": [
+    "$\\varepsilon = \\varepsilon_{app}+\\varepsilon_{ro}=\\cfrac{h^2}{24}|f'''(x)|+\\cfrac{2|f(x)|\\epsilon_m}{h}$\n",
+    "\n",
+    "Derivando con respecto a h para poder obtener la optimizacion del error, es decir el error mas pequeño.\n",
+    "\n",
+    "$\\cfrac{d}{dh}\\varepsilon = \\cfrac{h}{12}|f'''(x)|-\\cfrac{2|f(x)|\\epsilon_m}{h^2}$\n",
+    "\n",
+    "Igualando a 0 para poder obtener a que valor de $h$, $\\varepsilon$ es mas pequeño.\n",
+    "\n",
+    "$\\cfrac{h}{12}|f'''(x)|-\\cfrac{2|f(x)|\\epsilon_m}{h^2}=0$ \n",
+    "\n",
+    "Despejando h de esta ecuación, a la que llamaremos $h_{opt}$\n",
+    "\n",
+    "$\\cfrac{h_{opt}}{12}|f'''(x)|-\\cfrac{2|f(x)|\\epsilon_m}{h_{opt}^2}=0$\n",
+    "\n",
+    "$\\cfrac{h_{opt}}{12}|f'''(x)|=\\cfrac{2|f(x)|\\epsilon_m}{h_{opt}^2}$\n",
+    "\n",
+    "$h_{opt}^3=\\cfrac{24|f(x)|\\epsilon_m}{|f'''(x)|}$\n",
+    "\n",
+    "$h_{opt}=\\sqrt[3]{\\cfrac{24|f(x)|\\epsilon_m}{|f'''(x)|}}$\n",
+    "\n",
+    "$h_{opt}=\\sqrt[3]{24\\epsilon_m\\left|\\cfrac{f(x)}{f'''(x)}\\right|}$\n",
+    "\n",
+    "Que ahora sustituyendo este resultado en la ecuacion del error $\\varepsilon$, tenemos:\n",
+    "\n",
+    "$\\varepsilon_{opt}=\\cfrac{h^2_{opt}}{24}|f'''(x)|+\\cfrac{2|f(x)|\\epsilon_m}{h_{opt}}$\n",
+    "\n",
+    "$\\varepsilon_{opt}=\\cfrac{\\left(\\sqrt[3]{24\\epsilon_m\\left|\\cfrac{f(x)}{f'''(x)}\\right|}\\right)^2}{24}|f'''(x)|+\\cfrac{2|f(x)|\\epsilon_m}{\\sqrt[3]{24\\epsilon_m\\left|\\cfrac{f(x)}{f'''(x)}\\right|}}$\n",
+    "\n",
+    "$\\varepsilon_{opt}=\\sqrt[3]{\\cfrac{1}{24}\\epsilon^2_{m}|f^2(x)f'''(x)|}+\\sqrt[3]{\\cfrac{1}{3}\\epsilon^2_{m}|f^2(x)f'''(x)|}$\n",
+    "\n",
+    "$\\varepsilon_{opt}=\\left(\\sqrt[3]{\\cfrac{1}{24}}+\\sqrt[3]{\\cfrac{1}{3}}\\right)\\sqrt[3]{\\epsilon^2_{m}|f^2(x)f''(x)|}$\n",
+    "\n",
+    "$\\varepsilon_{opt}=\\sqrt[3]{\\cfrac{9}{8} \\epsilon^2_{m}|f^2(x)f''(x)|}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3a56c23e-fcd8-4697-8650-d03b0a238b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hop(h,x1):\n",
+    "    x=sym.Symbol(\"x\", real=True)\n",
+    "    fx = sym.exp(sym.sin(2*x))\n",
+    "    f3=sym.diff(fx,x,3)\n",
+    "    f3x=sym.lambdify(x,f3)\n",
+    "    f=sym.lambdify(x,fx)\n",
+    "    fh=f(h)\n",
+    "    fx1=f(x1)\n",
+    "    fx3=f3x(x1)\n",
+    "    em=fh/(2*fx1)\n",
+    "    hopt=pow(24*em*sym.Abs(fx1/fx3),1/3)\n",
+    "    eopt=pow(9*em*em*sym.Abs(fx1*fx1*fx3)/8,1/3)\n",
+    "    return hopt, eopt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c2442d19-9d8b-4ce0-a245-6e874e96c8da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e-1 (0.767215746885677, 2.38481527709515)\n",
+      "e-2 (0.722856815573690, 2.11701672683976)\n",
+      "e-3 (0.718532979141255, 2.09176620089629)\n",
+      "e-4 (0.718101988982680, 2.08925758877989)\n",
+      "e-5 (0.718058904156218, 2.08900689291315)\n",
+      "e-6 (0.718054595815719, 2.08898182498084)\n",
+      "e-7 (0.718054164983090, 2.08897931820416)\n",
+      "e-8 (0.718054121899842, 2.08897906752665)\n",
+      "e-9 (0.718054117591517, 2.08897904245890)\n",
+      "e-10 (0.718054117591517, 2.08897904245890)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"e-1\",hop(0.1,0.5))\n",
+    "print(\"e-2\",hop(0.01,0.5))\n",
+    "print(\"e-3\",hop(0.001,0.5))\n",
+    "print(\"e-4\",hop(0.0001,0.5))\n",
+    "print(\"e-5\",hop(0.00001,0.5))\n",
+    "print(\"e-6\",hop(0.000001,0.5))\n",
+    "print(\"e-7\",hop(0.0000001,0.5))\n",
+    "print(\"e-8\",hop(0.00000001,0.5))\n",
+    "print(\"e-9\",hop(0.000000001,0.5))\n",
+    "print(\"e-10\",hop(0.000000001,0.5))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec7b7455-06aa-4bf5-be7e-5f5d195b17f5",
+   "id": "7a13e3a2-828e-415c-8163-50c62023c115",
    "metadata": {},
    "outputs": [],
    "source": []
